# PrEWSampleProduction

./: .gitignore  CMakeLists.txt  Readme.md
PrEWInputProduction/: Readme.md  load_python_env.sh
PrEWInputProduction/CommonHelpers/: CSVMetadata.py  DistrHelpers.py  InputHelpers.py  RKCoefMatcher.py  RKDistrReader.py
PrEWInputProduction/Core/: Conventions.py  CreatePrEWInput.py
PrEWInputProduction/Difermion/: DifermionHadronic.py  DifermionLeptonic.py
PrEWInputProduction/IO/: CSVMetadata.py  OutputHelpers.py  TGCConfigReader.py
PrEWInputProduction/MathHelp/: PolynomialHelp.py
PrEWInputProduction/Physics/: PhysicsOptions.py  TGCs.py
PrEWInputProduction/RKHelp/: RKCoefMatcher.py  RKDistrReader.py
PrEWInputProduction/ROOTHelp/: DistrHelpers.py  DistrPlotting.py
PrEWInputProduction/SingleW/: SingleW.py
PrEWInputProduction/Systematics/: MuonAcceptance.py  SystematicsOptions.py
PrEWInputProduction/Validation/: MuonAccValidation.py
PrEWInputProduction/WW/: WW.py
macros/: add_processors.sh  compile.sh  load_env.sh
macros/FullProduction/: configure_script.sh  manage_process_files.sh  run_single_process.sh
macros/SubmitScripts/: run.sh  submit_script.submit  submit_script_6h.submit  submit_script_8h.submit
macros/WhizardRescan/: InterpretFilename.py  TGCs2Sindarin.py  configure_script.sh  manage_rescan_files.sh  rescan_single_process.sh
scripts/: WWProcessorTest.xml
scripts/config/: input_250.config  output_250.config  software.config  tgc.config  tgc_dev_points_g1z_ka_la.config
scripts/examples/: 2fHadronicProcessorTest.xml  SingleWProcessorTest.xml  WWProcessorTest.xml
scripts/templates/: 2f_Z_h.xml  4f_WW_sl.xml  4f_WW_sl_rescan.sin  (+1 more)
source/: CMakeLists.txt
source/include/Difermion/: DifermionObservables.h  DifermionProcessor.h
source/include/SingleW/: SingleWObservables.h  SingleWProcessor.h
source/include/Utils/: Collections.h  Collections.tpp  HeaderInfo.h  MC.h
source/include/WW/: WWObservables.h  WWProcessor.h
source/src/Difermion/: DifermionProcessor.cc
source/src/Difermion/Processor/: create_tree.cpp  extract_ee_observables.cpp  extract_ff_observables.cpp  extract_ff_true_observables.cpp  extract_lab_observables.cpp  extract_observables.cpp  save_tree.cpp
source/src/SingleW/: SingleWProcessor.cc
source/src/SingleW/Processor/: create_tree.cpp  extract_ee_observables.cpp  extract_enu_observables.cpp  extract_lab_observables.cpp  extract_observables.cpp  save_tree.cpp
source/src/Utils/: HeaderInfo.cpp  MC.cpp
source/src/WW/: WWProcessor.cc
source/src/WW/Processor/: create_tree.cpp  extract_Wl_observables.cpp  extract_ee_observables.cpp  extract_lab_observables.cpp  extract_observables.cpp  save_tree.cpp
